--- a/src/Assets/css/App.css
+++ b/src/Assets/css/App.css
@@ -3,6 +3,12 @@
   margin: 0;
   padding: 0;
 }
+ul {
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
+}
 
 :root {
   --Red: #8d021f;
@@ -15,5 +21,5 @@ html,
 body {
   background-color: var(--White);
   height: 100vh;
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
 }
