--- a/src/Components/AdminSideBar/index.css
+++ b/src/Components/AdminSideBar/index.css
@@ -37,120 +37,12 @@ Variables
   --clr-green-light: hsl(125, 71%, 66%);
   --clr-black: #222;
   --transition: all 0.3s linear;
-  --spacing: 0.1rem;
-  --radius: 0.25rem;
-  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-  --max-width: 1170px;
-  --fixed-width: 620px;
-}
-/*
-=============== 
-Global Styles
-===============
-*/
-
-*,
-::after,
-::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background: var(--clr-grey-10);
-  color: var(--clr-grey-1);
-  line-height: 1.5;
-  font-size: 0.875rem;
-}
-ul {
-  list-style-type: none;
-}
-a {
-  text-decoration: none;
-}
-h1,
-h2,
-h3,
-h4 {
-  letter-spacing: var(--spacing);
-  text-transform: capitalize;
-  line-height: 1.25;
-  margin-bottom: 0.75rem;
-}
-h1 {
-  font-size: 3rem;
-}
-h2 {
-  font-size: 2rem;
-}
-h3 {
-  font-size: 1.25rem;
-}
-h4 {
-  font-size: 0.875rem;
-}
-p {
-  margin-bottom: 1.25rem;
-  color: var(--clr-grey-5);
-}
-@media screen and (min-width: 800px) {
-  h1 {
-    font-size: 4rem;
-  }
-  h2 {
-    font-size: 2.5rem;
-  }
-  h3 {
-    font-size: 1.75rem;
-  }
-  h4 {
-    font-size: 1rem;
-  }
-  body {
-    font-size: 1rem;
-  }
-  h1,
-  h2,
-  h3,
-  h4 {
-    line-height: 1;
-  }
-}
-/*  global classes */
-
-/* section */
-.section {
-  width: 90vw;
-  margin: 0 auto;
-  max-width: var(--max-width);
-}
-
-@media screen and (min-width: 992px) {
-  .section {
-    width: 95vw;
-  }
-}
-
-/*
-=============== 
-Home
-===============
-*/
-
-main {
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 .sidebar-toggle {
   position: fixed;
   top: 2rem;
-  left: 3rem;
-  font-size: 2rem;
+  left: 2rem;
+  font-size: 1.5rem;
   background: transparent;
   border-color: transparent;
   /* color: var(--clr-primary-5); */
@@ -197,7 +89,7 @@ main {
 Modal
 ===============
 */
-.modal-overlay {
+/* .modal-overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -209,9 +101,9 @@ Modal
   transition: var(--transition);
   visibility: hidden;
   z-index: -1;
-}
+} */
 /* OPEN/CLOSE MODAL */
-.show-modal {
+/* .show-modal {
   visibility: visible;
   z-index: 10;
 }
@@ -235,7 +127,7 @@ Modal
   border-color: transparent;
   color: var(--clr-red-dark);
   cursor: pointer;
-}
+} */
 
 /*
 =============== 
@@ -265,36 +157,39 @@ Sidebar
   height: 100px;
   margin: auto;
 }
+.links {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
 .links a {
-  display: flex;
-  align-items: center;
   font-size: 1.25rem;
-  text-transform: capitalize;
-  color: var(--clr-grey-3);
+  color: var(--Black);
   transition: var(--transition);
-  letter-spacing: var(--spacing);
-  padding: 1rem 1.5rem;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+.links a:hover {
+  background: var(--White);
+  color: var(--Red);
 }
 .links li {
-  margin: auto;
-  display: block;
-  /* text-align: right; */
+  margin: 10px;
 }
 
-.links a:hover {
-  background: var(--clr-grey-10);
-  color: var(--clr-grey-2);
-}
 .links a svg {
-  font-size: 1.5rem;
-  color: var(--clr-grey-5);
-  margin-right: 1rem;
-  transition: var(--transition);
+  /* font-size: 1.5rem; */
+  /* color: var(--Light-Gray); */
+  /* margin-right: 1rem; */
+  /* transition: var(--transition); */
 }
 .links a:hover svg {
-  color: var(--clr-grey-4);
+  /* color: var(--Light-Gray); */
 }
+/* 
 .social-icons {
   justify-self: center;
   display: flex;
@@ -308,7 +203,7 @@ Sidebar
 }
 .social-icons a:hover {
   color: var(--clr-primary-1);
-}
+} */
 
 .sidebar {
   position: fixed;
@@ -317,14 +212,13 @@ Sidebar
   width: 100%;
   height: 100%;
   background: var(--clr-white);
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-  row-gap: 1rem;
-  box-shadow: var(--clr-red-dark);
+  /* display: grid; */
+  /* grid-template-rows: auto 1fr auto; */
+  /* row-gap: 1rem; */
+  /* box-shadow: var(--clr-red-dark); */
   transition: var(--transition);
   transform: translate(-100%);
   z-index: 100;
-  /* text-align: right; */
 }
 .show-sidebar {
   transform: translate(0);
@@ -332,5 +226,24 @@ Sidebar
 @media screen and (min-width: 676px) {
   .sidebar {
     width: 400px;
+  }
+}
+@media screen and (min-width: 800px) {
+  .sidebar {
+    width: 300px;
+    transform: translate(0);
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    /* box-shadow: rgba(0, 0, 0, 0.5); */
+  }
+  .close-modal-btn {
+    display: none;
+    visibility: none;
+    background-color: red;
+  }
+  .btn {
+    display: none;
+  }
+  .close-btn {
+    display: none;
   }
 }
