--- a/src/Assets/css/views/admin-view.css
+++ b/src/Assets/css/views/admin-view.css
@@ -12,12 +12,19 @@
   margin: auto;
   justify-content: center;
   align-items: center;
-  vertical-align: center;
   max-width: 500px;
-  font-size: 1.5rem;
+
   padding-top: 50px;
   text-align: right;
-  border: 1px solid rgba(0, 0, 0, 0.5);
+  border: 1px solid rgba(3, 3, 1, 0.3);
+}
+.create-product-form label {
+  font-size: 1.25rem;
+  color: var(--Grey);
+}
+.create-product-form h1 {
+  color: var(--Red);
+  font-size: 2.5rem;
 }
 .create-product-form input {
   font-size: 1.5rem;
@@ -25,12 +32,18 @@
   margin: 5px;
   padding: 10px;
   cursor: pointer;
+  color: var(--Light-Grey);
 }
 .create-product-form button {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   padding: 1rem;
   width: 100%;
   cursor: pointer;
+}
+.response-message {
+  text-align: center;
+  padding: 1rem;
+  color: var(--Red);
 }
 @media (min-width: 800px) {
   .admin-view-container {
