--- a/src/Assets/css/App.css
+++ b/src/Assets/css/App.css
@@ -21,5 +21,6 @@ html,
 body {
   background-color: var(--White);
   height: 100vh;
-  /* font-family: Arial, Helvetica, sans-serif; */
+  font-family: Assistant, sans-serif;
+  font-weight: 400;
 }
