--- a/src/Assets/css/views/product-details.css
+++ b/src/Assets/css/views/product-details.css
@@ -3,6 +3,23 @@
   flex-direction: column;
   align-items: center;
 }
+.product-details-container p {
+  padding: 10px;
+  max-width: 500px;
+  text-align: right;
+}
 .product-details-container h1 {
   padding-top: 100px;
+  color: var(--Red);
+}
+.product-gallery {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+.product-gallery img {
+  width: 100%;
+  max-width: 500px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  margin-bottom: 5px;
 }
