--- a/src/Components/NavBar/navbar.css
+++ b/src/Components/NavBar/navbar.css
@@ -26,7 +26,7 @@
   padding-top: 150px;
   transition: width 700ms;
   font-size: 110%;
-  font-family: Arial;
+  font-family: Assistant, sans-serif;
   overflow-y: hidden;
   filter: drop-shadow(1px 1px 10px #222222);
 }
@@ -94,14 +94,14 @@
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 10;
   height: 10vh;
-  font-weight: 600;
+  font-weight: 500;
   /* filter: drop-shadow(1px 1px 10px #222222); */
 }
 #top-menu a {
   text-decoration: none;
   color: #8a8a8a;
   transition: 600ms;
-  padding: 15px;
+  padding: 25px;
   cursor: pointer;
   color: #8d021f;
 }
