--- a/src/Components/PageHeader/page-header.css
+++ b/src/Components/PageHeader/page-header.css
@@ -9,23 +9,31 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  color: white;
+  /* color: var(--White); */
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+
   /* height: 10vh; */
 
   /* padding: 15vh; */
 }
 .slide h1 {
-  font-family: "Times New Roman", Times, serif;
   color: var(--White);
+  color: rgba(255, 255, 255, 0.8);
   z-index: 10;
   font-size: 3rem;
   padding-top: 15vh;
+  padding-left: 1rem;
+
+  filter: drop-shadow(1px 1px 15px var(--Black));
 }
 .slide p {
-  font-family: "Times New Roman", Times, serif;
-  color: var(--White);
+  color: rgba(255, 255, 255, 0.6);
+
   z-index: 10;
   font-size: 2rem;
+  padding-left: 1rem;
+  filter: drop-shadow(1px 1px 10px var(--Black));
 }
 .slide img {
   position: absolute;
@@ -40,8 +48,8 @@
 }
 @media (min-width: 900px) {
   .slide h1 {
-    padding-top: 12vh;
-    font-size: 10rem;
+    padding-top: 15vh;
+    font-size: 8rem;
   }
   .slide p {
     z-index: 10;
