--- a/src/Components/ProductGrid/product-grid.css
+++ b/src/Components/ProductGrid/product-grid.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   gap: 1.5rem;
-  padding: 10px;
+  padding: 1rem;
 }
 .card {
   cursor: pointer;
