--- a/src/Components/Search/search.css
+++ b/src/Components/Search/search.css
@@ -1,17 +1,17 @@
 .search {
   width: 100%;
   background-color: var(--Red);
-  height: 5vh;
+  height: 50px;
 }
 .search form input {
-  height: 5vh;
-
+  /* height: 150px; */
+  height: 50px;
   width: 100%;
   display: block;
   /* margin-left: 69.9%; */
-  font-size: 1.5rem;
-  padding: 5px;
-  border: 1px solid rgba(0, 0, 0, 0.3);
+  font-size: 2rem;
+  padding: 10px;
+  /* border: 1px solid rgba(0, 0, 0, 0.3); */
   margin-top: 1px;
   outline-color: var(--Red);
   font-family: Assistant, sans-serif;
@@ -23,7 +23,6 @@
 }
 @media (min-width: 900px) {
   .search form input {
-    height: 5vh;
     width: 50%;
     display: block;
     margin: auto;
