--- a/src/Assets/css/views/about-page-view.css
+++ b/src/Assets/css/views/about-page-view.css
@@ -1,9 +1,10 @@
 .about-page-container {
-  position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  width: 100%;
+  padding-bottom: 50px;
+  /* color: red; */
 }
 .about-page-header {
   max-height: 400px;
@@ -13,47 +14,34 @@
   height: 100%;
   max-height: 400px;
 }
-.company-profile-content {
-  background-color: rgb(255, 255, 255);
+.about-page-container .access-navbar {
+  padding-top: 20px;
+  padding-right: 20px;
+  width: 100%;
   text-align: right;
-  color: var(--Black);
-  font-family: Assistant, sans-serif;
-  min-height: 500px;
+  max-width: 500px;
 }
-
-.company-profile-content h2 {
-  text-align: right;
+.about-page-container .access-navbar a {
+  margin-left: 5px;
   color: var(--Red);
-  padding: 20px;
 }
-.company-profile-content p {
-  padding: 10px;
-  animation: fade-in 1600ms linear 3000ms;
-}
-
-.access-navbar a {
+.about-page-container .access-navbar a:hover {
+  font-weight: 900;
   color: var(--Light-Red);
 }
 
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
+.about-page-container p {
+  /* color: red; */
+  max-width: 500px;
+  text-align: right;
+  padding: 20px;
+  color: var(--Black);
 }
-@keyframes fade-in-from-left {
-  0% {
-    opacity: 0;
-    transform: translateX(-100px);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateX(0px);
-  }
-}
-@media (min-width: 900px) {
+.about-page-container h2 {
+  color: var(--Red);
+  max-width: 500px;
+  text-align: right;
+  width: 100%;
+  padding-top: 20px;
+  padding-right: 20px;
 }
