--- a/src/Assets/css/views/product-details.css
+++ b/src/Assets/css/views/product-details.css
@@ -23,3 +23,17 @@
   border: 1px solid rgba(0, 0, 0, 0.3);
   margin-bottom: 5px;
 }
+.product-details-call-now {
+  margin: 10px;
+  padding: 15px;
+  color: var(--Grey);
+  border: 1px solid var(--Red);
+  border-radius: 5px;
+  transition: 300ms;
+}
+.product-details-call-now:hover {
+  color: var(--White);
+  background-color: var(--Red);
+  border: 1px solid var(--Grey);
+  transition: 300ms;
+}
