--- a/src/Components/NavBar/navbar.css
+++ b/src/Components/NavBar/navbar.css
@@ -9,7 +9,7 @@
 #hamburger-button-id {
   position: fixed;
   top: 20px;
-  left: 35px;
+  right: 35px;
   z-index: 15;
   filter: drop-shadow(1px 1px 1px #222222);
 }
@@ -20,7 +20,7 @@
   position: fixed;
   z-index: 15;
   top: 0;
-  left: 0;
+  right: 0;
   background-color: var(--White);
   overflow-x: hidden;
   padding-top: 150px;
@@ -61,25 +61,21 @@
   opacity: 0;
 }
 .side-nav button {
-  padding: 10px 10px 10px 30px;
   text-decoration: none;
-  font-size: 22px;
   color: var(--Grey);
   display: block;
-  transition: 0.3s;
+  transition: 600ms;
   background-color: transparent;
   border: none;
   outline: none;
+  position: absolute;
+  top: 20px;
+  left: 30px;
+  font-size: 2.5rem;
+  cursor: pointer;
+  z-index: 100;
 }
 
-.side-nav .btn-close {
-  position: absolute;
-  top: 0;
-  right: 22px;
-  font-size: 3rem;
-  margin-left: 50px;
-  cursor: pointer;
-}
 /* Desktop */
 #top-menu {
   font-family: Assistant, sans-serif;
@@ -129,8 +125,8 @@
     width: 50px;
     position: fixed;
     top: 10px;
-    right: 10px;
-    z-index: 100;
+    left: 10px;
+    z-index: 15;
     filter: drop-shadow(1px 1px 1px #222222);
   }
 }
