--- a/src/Components/Search/search.css
+++ b/src/Components/Search/search.css
@@ -6,20 +6,21 @@
 .search form input {
   /* height: 150px; */
   height: 50px;
-  width: 100%;
+  width: 99.7%;
   display: block;
   /* margin-left: 69.9%; */
-  font-size: 2rem;
+  font-size: 1.75rem;
   padding: 10px;
-  /* border: 1px solid rgba(0, 0, 0, 0.3); */
+  border: 1px solid var(--Red);
   margin-top: 1px;
   outline-color: var(--Red);
   font-family: Assistant, sans-serif;
+  margin: auto;
 
   color: var(--Black);
 }
 .search form input ::placeholder {
-  font-size: 2rem;
+  font-size: 1.75rem;
 }
 @media (min-width: 900px) {
   .search form input {
