--- a/src/Assets/css/views/contact-view.css
+++ b/src/Assets/css/views/contact-view.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   padding-bottom: 50px;
+  min-height: 90vh;
 }
 .contact-page-container h2 {
   color: var(--Red);
