--- a/src/Components/ProductGrid/product-grid.css
+++ b/src/Components/ProductGrid/product-grid.css
@@ -3,7 +3,7 @@
   grid-template-columns: repeat(1, 1fr);
   gap: 1.5rem;
   padding: 1rem;
-  min-height: 35vh;
+  background-color: var(--Light-Grey);
 }
 .card {
   cursor: pointer;
@@ -72,20 +72,3 @@
     grid-template-columns: repeat(4, 1fr);
   }
 }
-/* }
-
-@media (max-width: 500px) {
-  .cards {
-    grid-template-columns: 1fr;
-  }
-}
-@media (min-width: 1200px) {
-  .cards {
-    grid-template-columns: repeat(5, 1fr);
-  }
-}
-@media (min-width: 1200px) {
-  .cards {
-    grid-template-columns: repeat(5, 1fr);
-  }
-} */
