--- a/src/Components/Slider/index.css
+++ b/src/Components/Slider/index.css
@@ -7,7 +7,7 @@ Slider
 .section-center {
   top: 70px;
   width: 100%;
-  height: 350px;
+  height: 70vh;
   text-align: center;
   position: relative;
   margin-bottom: 70.5px;
@@ -22,7 +22,7 @@ article {
   width: 100%;
   height: 100%;
   opacity: 0;
-  transition: 1300ms ease;
+  transition: 2800ms ease;
 }
 article .person-img {
   width: 100%;
@@ -35,23 +35,21 @@ article .person-img {
 
 article .title {
   position: absolute;
-  color: var(--White);
-  top: 30px;
+  color: rgba(245, 245, 245, 0.95);
+  top: 20vh;
   left: 50%;
   font-size: 2.5rem;
   font-weight: 800;
-  filter: drop-shadow(1px 1px 1px Black);
+  /* filter: drop-shadow(1px 1px 1px Black); */
   transform: translate(-50%, 0);
   min-width: 200px;
 }
 article .text {
-  color: var(--White);
+  color: rgba(245, 245, 245, 0.7);
   position: absolute;
-  top: 135px;
+  top: 30vh;
   left: 50%;
-  max-width: 300px;
-  min-width: 200px;
-  filter: drop-shadow(1px 1px 1px black);
+  width: 300px;
   font-size: 2rem;
   transform: translate(-50%, 0);
   font-weight: 600;
@@ -60,10 +58,10 @@ article .text {
 .prev,
 .next {
   position: absolute;
-  top: 200px;
+  top: 35vh;
   transform: translateY(-50%);
   background: transparent;
-  color: var(--White);
+  color: rgba(255, 255, 255, 0.7);
   width: 1.25rem;
   height: 1.25rem;
   display: grid;
@@ -105,6 +103,13 @@ article.nextSlide {
     height: 2rem;
     font-size: 2rem;
     margin: 10px;
+  }
+  article .title {
+    font-size: 5rem;
+  }
+  article .text {
+    font-size: 3rem;
+    width: 600px;
   }
 }
 .section-center {
