--- a/src/Assets/css/App.css
+++ b/src/Assets/css/App.css
@@ -17,9 +17,9 @@ a {
 
   --Light-Grey: #bfbdc1;
   /* --Light-Grey: #d4d4d4; */
-  --Very-Light-Grey: #d4d4d4;
+  --Very-Light-Grey: rgba(0, 0, 0, 0.01);
   --Black: #030301;
-  --White: #f5f5f5;
+  --White: white;
 }
 
 html,
