--- a/src/Components/Slider/index.css
+++ b/src/Components/Slider/index.css
@@ -40,12 +40,11 @@ article .title {
   left: 50%;
   font-size: 2.5rem;
   font-weight: 800;
-  /* filter: drop-shadow(1px 1px 1px Black); */
   transform: translate(-50%, 0);
   min-width: 200px;
 }
 article .text {
-  color: rgba(245, 245, 245, 0.7);
+  color: rgba(245, 245, 245, 0.9);
   position: absolute;
   top: 30vh;
   left: 50%;
@@ -54,18 +53,37 @@ article .text {
   transform: translate(-50%, 0);
   font-weight: 600;
 }
-
+.hero-section-call-to-action {
+  color: rgba(245, 245, 245, 1);
+  position: absolute;
+  top: 45vh;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 300px;
+  font-size: 2rem;
+  background-color: var(--Red);
+  border: solid 1px rgba(245, 245, 245, 0.9);
+  padding: 10px;
+  transition: 600ms ease;
+  filter: drop-shadow(1px 1px 10px rgba(0, 0, 0, 0.1));
+}
+.hero-section-call-to-action:hover {
+  color: var(--Red);
+  background-color: rgba(245, 245, 245, 0.9);
+  border: solid 1px var(--Red);
+  transition: 450ms ease;
+}
+.hero-section-call-to-action > i {
+  font-size: 1.75rem;
+}
 .prev,
 .next {
   position: absolute;
   top: 35vh;
   transform: translateY(-50%);
   background: transparent;
-  color: rgba(255, 255, 255, 0.7);
-  width: 1.25rem;
-  height: 1.25rem;
-  display: grid;
-  place-items: center;
+  color: rgba(255, 255, 255, 1);
   border-color: transparent;
   font-size: 2rem;
   cursor: pointer;
@@ -73,7 +91,8 @@ article .text {
   margin: 10px;
   margin-right: 20px;
   outline: none;
-  filter: drop-shadow(1px 1px 1px black);
+  filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.3));
+  display: none;
 }
 .prev:hover,
 .next:hover {
